--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "shakup/silex-boilerplate",
-    "description": "A ready-to-use MVC structure based on Silex, Monolog, Twig and Doctrine",
+    "description": "A ready-to-use MVC structure based on Silex, Twig, Monolog and Doctrine",
     "require": {
-        "silex/silex": "~1.2",
+        "php": ">5.4",
         "twig/twig": "~1.18",
-        "monolog/monolog": "~1.13",
         "doctrine/dbal": "~2.5",
-        "php": ">5.4"
+        "silex/silex": "~1.2",
+        "monolog/monolog": "~1.13"
     },
      "autoload": {
         "psr-4": {
